--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,15 @@ steps:
     versionSpec: '12.x'
   displayName: 'Install Node.js'
 
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testRunner: JUnit
+    testResultsFiles: '**/TEST-RESULTS.xml
+
 - script: |
+    npm install -g @angular/cli
     npm install --only=dev
+    mocha test --reporter mocha-junit-reporter
   displayName: 'npm install'
-- script: npm install -g @angular/cli
+
