--- a/swDeploy_Web-app/package.json
+++ b/swDeploy_Web-app/package.json
@@ -1,14 +1,15 @@
 {
   "name": "swdeploy_web-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
