--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
     npx mocha
     mocha test --reporter mocha-junit-reporter
     npm install -g @angular/cli
+    npm test
   displayName: 'npm install'
 
 - task: PublishTestResults@2
