--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,8 @@ steps:
     npx mocha
     mocha test --reporter mocha-junit-reporter
     npm install -g @angular/cli
-    npm install mocha chai --save-dev
+    npm install mocha chai nock --save-dev
+    npm install --svae axios
     npm test
   displayName: 'npm install'
 
