Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     npm install -g @angular/cli
     npm install mocha chai nock --save-dev
     npm install --svae axios
-    npm test
+    ./node_modules/.bin/mocha test
   displayName: 'npm install'
 
 - task: PublishTestResults@2
