--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,4 @@ steps:
   inputs:
     testRunner: JUnit
     testResultsFiles: '**/TEST-RESULTS.xml'
+    searchFolder: '$(Build.SourcesDirectory)/swDeploy_Web-app'
