--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,10 +18,12 @@ steps:
 
 - script: |
     npm install 
+    npm run build
     npx mocha
     npm i -g mocha
     npm install -g @angular/cli
     ./node_modules/.bin/mocha
+    mocha test --reporter mocha-junit-reporter
     npm test
   displayName: 'npm install, test'
   workingDirectory: '$(Build.SourcesDirectory)/swDeploy_Web-app'
