--- a/swDeploy_Web-app/package.json
+++ b/swDeploy_Web-app/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "test": "mocha ./index.test.js"
   },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "mocha": "^3.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
@@ -16,6 +18,7 @@
     "chai-http": "4.3.0",
     "mocha": "^8.2.1",
     "nock": "^13.0.4",
+    "mocha-junit-reporter": "^1.12.0",
     "request": "^2.88.2"
   },
   "description": ""
