--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,4 +40,4 @@ steps:
     azureSubscription: 'azure_rm_connection'
     appType: 'webApp'
     WebAppName: 'swDepylomentApp'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/swDeploy_Web-app'
