--- a/swDeploy_Web-app/package.json
+++ b/swDeploy_Web-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./index.test.js"
+    "test": "mocha test --reporter mocha-junit-reporter"
   },
   
   "author": "",
