--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   condition: succeededOrFailed()
   inputs:
     testRunner: JUnit
-    testResultsFiles: '**/test_Results.xml'
+    testResultsFiles: '$(Build.SourcesDirectory)/swDeploy_Web-app/test_Results.xml'
     searchFolder: '$(Build.SourcesDirectory)/swDeploy_Web-app'
 
     
