Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,10 @@ steps:
     testResultsFiles: '$(Build.SourcesDirectory)/swDeploy_Web-app/test_Results.xml'
     searchFolder: '$(Build.SourcesDirectory)/swDeploy_Web-app'
 
-    
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/swDeploy_Web-app'
+
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'Azure für Bildungseinrichtungen(3813678f-1541-4ef4-a3f4-a21efebe0802)'
