--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
- # Node.js
+# Node.js
 # Build a general Node.js project with npm.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
@@ -19,6 +19,9 @@ steps:
 - script: |
     npm install 
     npm run build
+    npm i -g mocha
+    npm install -g @angular/cli
+    ./node_modules/.bin/mocha
     npm test
   displayName: 'npm install, test'
   workingDirectory: '$(Build.SourcesDirectory)/swDeploy_Web-app'
