--- a/Lab3/Teil2/MySQL/Dockerfile
+++ b/Lab3/Teil2/MySQL/Dockerfile
@@ -2,8 +2,14 @@ FROM debian:jessie
 
 ENV MYSQL_DATABASE wordpress
 
+RUN apt-get update && apt-get install -y sql
+
+ENTRYPOINT ["sql"]
+
+
+
 RUN apt-get install mysql-server
 
-RUN apt-get update && apt-get install -y wget
+
 
 COPY ./sql-scripts/ /docker-entrypoint-initdb.d/
