--- a/Lab3/Teil2/MySQL/Dockerfile
+++ b/Lab3/Teil2/MySQL/Dockerfile
@@ -2,7 +2,8 @@ FROM debian:jessie
 
 ENV MYSQL_DATABASE wordpress
 
-RUN apt-get update && apt-get install -y sql
+
+
 
 ENTRYPOINT ["sql"]
 
@@ -10,6 +11,7 @@ ENTRYPOINT ["sql"]
 
 RUN apt-get install mysql-server
 
-
+RUN mysql -u root -p
+ 
 
 COPY ./sql-scripts/ /docker-entrypoint-initdb.d/
