update docker-compose & Readme

--- a/Lab3/Teil2/WordPress/Dockerfile
+++ b/Lab3/Teil2/WordPress/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install mysql-server
 
 
 
-
+# run command inside the image filesystem
 RUN cd /var/www/html/
 
 
@@ -18,4 +18,8 @@ COPY . /var/www/html
 RUN apt-get install all_my_dependencies
 ADD my_app_files /my_app
 
+# run specified command within container
 CMD ["/my_app/start.sh"]
+
+# Port from Container
+EXPOSE 3306
