--- a/Lab3/Teil2/MySQL/Dockerfile
+++ b/Lab3/Teil2/MySQL/Dockerfile
@@ -1,17 +1,25 @@
+#mySQL-Server
 FROM debian:jessie
 
-ENV MYSQL_DATABASE wordpress
+ENV MYSQL_DATABASE=wordpress
+ENV MYQL_PW=password123
+ENV ACCEPT_EULA=Y
+
+
+RUN mysql -u root -p
+RUN apt-get install & update mysql-server
+
+
+COPY dataTable.sql dataTable.sql
+
+EXPOSE 3307
+
 
 
 
 
 ENTRYPOINT ["sql"]
 
-
-
-RUN apt-get install mysql-server
-
-RUN mysql -u root -p
  
 
 COPY ./sql-scripts/ /docker-entrypoint-initdb.d/
