--- a/Lab3/Teil2/docker-compose.yml
+++ b/Lab3/Teil2/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     ports:
       - "8081:8080"
     restart: always
+    environment:
+      MYSQL_DATABASE: wordpress
+      MYQL_PW: password123
 
   wordpress:
     depends_on:
@@ -15,3 +18,6 @@ services:
     ports:
       - "8081:8080"
     restart: always
+
+volumes: 
+  
