add some requirements

--- a/Lab3/Teil2/WordPress/Dockerfile
+++ b/Lab3/Teil2/WordPress/Dockerfile
@@ -1,16 +1,21 @@
 #wordpress
 FROM debian:jessie
 
+ENV DB_NAME=wordpressdb
+ENV DB_User=tanja
+ENV DB_PASSWORD=password123
+ENV DB_HOST=db:3306
+
 #mySQL root account
-RUN mysql -u root -p
+#RUN mysql -u root -p
 
 # seperate DB erstellen, die Wordpress steuern kann.
-RUN  CREATE DATABASE wordpress DEFAULT CHARACTER SET utf8 COLLATE utf8_unicode_ci;
+#RUN  CREATE DATABASE wordpress DEFAULT CHARACTER SET utf8 COLLATE utf8_unicode_ci;
 
 # account um zugriff auf DB zu gewähren
-RUN GRANT ALL ON wordpress.* TO 'wordpressuser'@'localhost' IDENTIFIED BY 'password';
-RUN FLUSH PRIVILEGES;
-RUN EXIT;
+#RUN GRANT ALL ON wordpress.* TO 'wordpressuser'@'localhost' IDENTIFIED BY 'password';
+#RUN FLUSH PRIVILEGES;
+#RUN EXIT;
 
 # zusäztliche PHP extensions
 RUN apt-get update && apt-get install  php-curl php-gd php-mbstring php-mcrypt php-xml php-xmlrpc
@@ -41,43 +46,14 @@ RUN sudo chown -R tanja:www-data /var/www/html
 # setgid setzen
 RUN sudo find /var/www/html -type d -exec chmod g+s {} \;
 
-
-
-#in -> /var/www/html/wp-config.php
-#define('DB_NAME', 'wordpress');
-
-#/** MySQL database username */
-#define('DB_USER', 'wordpressuser');
-
-#/** MySQL database password */
-#define('DB_PASSWORD', 'password');
-
-#. . .
-
-#Methode festlegen mit der WordPress in das Dateisystem schreiben soll.
-
-#define('FS_METHOD', 'direct');
-
-
-
 RUN apt-get update && apt-get install apache2
-
 RUN apt-get update && apt-get install mysql-server
 
+RUN mv /var/www/html/index.html /var/www/html/index.bak
+COPY docker-entrypoint.sh docker-entrypoint.sh
+RUN mv /usr/share/wordpress/wp-config-sample.php /etc/wordpress/config-localhost.php
+RUN cp -r wordpress /var/www/html/
 
-
-# run command inside the image filesystem
-RUN cd /var/www/html/
-
-
-COPY . /var/www/html
-
-
-RUN apt-get install all_my_dependencies
-ADD my_app_files /my_app
-
-# run specified command within container
-CMD ["/my_app/start.sh"]
-
+ENTRYPOINT ["docker-entrypoint.sh"]
 # Port from Container
-EXPOSE 3306
+EXPOSE 80
