--- a/Lab3/Teil2/MySQL/Dockerfile
+++ b/Lab3/Teil2/MySQL/Dockerfile
@@ -1,12 +1,13 @@
 #mySQL-Server
 FROM debian:jessie
 
-ENV MYSQL_DATABASE=wordpress
-ENV MYQL_PW=password123
+ENV DB_NAME=wordpressdb
+ENV DB_User=tanja
+ENV DB_PASSWORD=password123
 ENV ACCEPT_EULA=Y
 
 #install apache 
-RUN sudo apt-get updat e& install apache2
+RUN sudo apt-get update & install apache2
 
 # apache config zeile hinzufügen um Warning zu unterdrücken
 RUN  sudo nano /etc/apache2/apache2.conf
@@ -23,14 +24,14 @@ RUN apt-get install & update mysql-server
 
 #simple security script , danach pw eingeben
 # nein um fortzufahren
-RUN mysql_secure_installation
+#RUN mysql_secure_installation
 
 #PHP installiere (verarbeitet Code um dynamisch Inhalt anzuzeigen.)
 # kann scripte ausführen, verbindung zum mySQL DB herstellen
 RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
 
 # dir.conf bearbeiten, PHP an erste stelle
-RUN c/apache2/mods-enabled/dir.conf
+#RUN c/apache2/mods-enabled/dir.conf
 
 #<IfModule mod_dir.c>
  #   DirectoryIndex index.php index.html index.cgi index.pl index.xhtml index.htm
@@ -39,13 +40,8 @@ RUN c/apache2/mods-enabled/dir.conf
 RUN sudo systemctl restart apache2
 
 RUN mysql -u root -p
-
-COPY dataTable.sql dataTable.sql
-
-EXPOSE 3307
-
-ENTRYPOINT ["sql"]
-
- 
-
-COPY ./sql-scripts/ /docker-entrypoint-initdb.d/
+COPY docker-entrypoint.sh docker-entrypoint.sh
+COPY install.sh install.sh
+COPY dataTable.sql /docker-initdb-dataTable.d
+ENTRYPOINT ["docker-entrypoint.sh"]
+EXPOSE 3306
