--- a/Lab3/Teil2/docker-compose.yml
+++ b/Lab3/Teil2/docker-compose.yml
@@ -1,22 +1,43 @@
-version: '3'
+version: '3.3'
 
 
 services:
   db:
-    image: specified123
+    image: tanninchen/MySQL
     ports:
-      - "8081:8080"
+      - "3306:3306"
     restart: always
     environment:
-      MYSQL_DATABASE: wordpress
-      MYQL_PW: password123
+      DB_User: wordpressuser
+      DB_PASSWORD: wordpresspw
+      DB_NAME: wordpress
+    volumes: 
+      - type: volume
+        source: dbdata
+        target: /var/lib/mysql
+   
 
   wordpress:
     depends_on:
       - db
-    image: specified123
+    image: tanninchen/WordPress
     ports:
-      - "8081:8080"
+      - "8000:80"
+    volumes: 
+     - type: volume
+       source: wpuploads 
+       target: /var/html/wp-content/uploads/
+     - type: volume
+       source: wpconfig 
+       target: /etc/wordpress/
     restart: always
+    environment:
+      DB_HOST: db:3306
+      DB_User: wordpressuser
+      DB_PASSWORD: wordpresspw
+      DB_NAME: wordpress
 
-#volumes: 
+volumes: 
+  dbdata:
+  wpconfig:
+  wpuploads:
