--- a/Lab3/Teil2/sql/Dockerfile
+++ b/Lab3/Teil2/sql/Dockerfile
@@ -8,17 +8,17 @@ ENV DB_PASSWORD=password123
 
 #install apache 
 
-RUN sudo apt-get update & install apache2
+#RUN sudo apt-get update & install apache2
 
 # apache config zeile hinzufügen um Warning zu unterdrücken
-RUN  sudo nano /etc/apache2/apache2.conf
+#RUN  sudo nano /etc/apache2/apache2.conf
 # -> ServerName server_domain_or_IP
 
 # apache neustarten
-RUN  sudo systemctl restart apache2
+#RUN  sudo systemctl restart apache2
 
 # eingehenden Datenverkehr zulassen
-RUN sudo ufw allow in "Apache Full"
+#RUN sudo ufw allow in "Apache Full"
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
 # danach wird aufgefordert Kennwort für sql root benutzer
 #RUN apt-get install & update mysql-server
@@ -29,7 +29,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
 
 #PHP installiere (verarbeitet Code um dynamisch Inhalt anzuzeigen.)
 # kann scripte ausführen, verbindung zum mySQL DB herstellen
-RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
+#RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
 
 # dir.conf bearbeiten, PHP an erste stelle
 #RUN c/apache2/mods-enabled/dir.conf
@@ -38,7 +38,7 @@ RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
  #   DirectoryIndex index.php index.html index.cgi index.pl index.xhtml index.htm
 #</IfModule>
 
-RUN sudo systemctl restart apache2
+#RUN sudo systemctl restart apache2
 
 RUN mysql -u root -p
 COPY docker-entrypoint.sh docker-entrypoint.sh
