--- a/Lab3/Teil2/sql/Dockerfile
+++ b/Lab3/Teil2/sql/Dockerfile
@@ -10,20 +10,20 @@ USER root
 
 RUN apt-get update 
 #install apache 
-RUN sudo apt-get  install apache2
+#RUN sudo apt-get  install apache2
 
 # apache config zeile hinzufügen um Warning zu unterdrücken
-RUN  sudo nano /etc/apache2/apache2.conf
+#RUN  sudo nano /etc/apache2/apache2.conf
 # -> ServerName server_domain_or_IP
 
 # apache neustarten
-RUN  sudo systemctl restart apache2
+#RUN  sudo systemctl restart apache2
 
 # eingehenden Datenverkehr zulassen
-RUN sudo ufw allow in "Apache Full"
+#RUN sudo ufw allow in "Apache Full"
 
 # danach wird aufgefordert Kennwort für sql root benutzer
-RUN apt-get install & update mysql-server
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
 
 #simple security script , danach pw eingeben
 # nein um fortzufahren
@@ -31,7 +31,7 @@ RUN apt-get install & update mysql-server
 
 #PHP installiere (verarbeitet Code um dynamisch Inhalt anzuzeigen.)
 # kann scripte ausführen, verbindung zum mySQL DB herstellen
-RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
+#RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
 
 # dir.conf bearbeiten, PHP an erste stelle
 #RUN c/apache2/mods-enabled/dir.conf
@@ -40,11 +40,12 @@ RUN sudo apt-get install php libapache2-mod-php php-mcrypt php-mysql
  #   DirectoryIndex index.php index.html index.cgi index.pl index.xhtml index.htm
 #</IfModule>
 
-RUN sudo systemctl restart apache2
+#RUN sudo systemctl restart apache2
 
 #RUN mysql -u root -p
 COPY docker-entrypoint.sh docker-entrypoint.sh
 COPY install.sh install.sh
 COPY dataTable.sql /docker-initdb-dataTable.d
+RUN ./install.sh
 ENTRYPOINT ["docker-entrypoint.sh"]
 EXPOSE 3306
